Fix connection string in appsettings for PurchasingMCP
- Updated DefaultDatabase connection string in appsettings.Development.json to use 'PurchasingMCP' instead of 'PurchasingDB'.
- Updated DefaultDatabase connection string in appsettings.json to use 'PurchasingMCP' and corrected User ID and Password for consistency.
- Adjusted az webapp config command in deploy-apis.azcli for proper syntax.

--- a/src/purchasing-mcp/appsettings.Development.json
+++ b/src/purchasing-mcp/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultDatabase": "Data Source=localhost;Initial Catalog=PurchasingDB;Persist Security Info=True;User ID=devuser;Password='devuser';TrustServerCertificate=true"
+    "DefaultDatabase": "Data Source=localhost;Initial Catalog=PurchasingMCP;Persist Security Info=True;User ID=devuser;Password='devuser';TrustServerCertificate=true"
   },
   "Graph": {
     "TenantId": "d92b247e-90e0-4469-a129-6a32866c0d0a",
