Refactor configuration and deployment scripts for consistency
- Updated `deploy-apis.azcli` to standardize account naming convention.
- Modified `food-catalog-api/.azure/config` to align group naming with other services.
- Adjusted `hr-mcp-server/.azure/config` to unify group and app service plan names.
- Changed `appsettings.json` in `hr-mcp-server` to use correct connection string credentials.
- Renamed `hr-mcp-azure-dev` to `hr-mcp-azure` in `inspector.config.json` for clarity.
- Updated `readme.md` to reflect the new server name for Azure deployment.
- Standardized group name in `purchasing-mcp-v1/.azure/config` to match other services.
- Removed unnecessary Entity Framework Core package references from `PurchasingService.csproj`.
- Updated connection string in `purchasing-mcp-v1/appsettings.json` with correct credentials.
- Modified `deploy-apis.azcli` in `purchasing-mcp-v1` to ensure correct app service plan reference.
- Updated `publish.ps1` to reflect the new group naming convention.

--- a/src/food-catalog-api/.azure/config
+++ b/src/food-catalog-api/.azure/config
@@ -1,5 +1,5 @@
 [defaults]
-group = agentic-process-dev
+group = cs-business-process-dev
 sku = F1
 appserviceplan = process-food-plan-dev
 location = westeurope
