--- a/src/hr-mcp-server/.azure/config
+++ b/src/hr-mcp-server/.azure/config
@@ -1,7 +1,7 @@
 [defaults]
-group = m365-copilot-dev
+group = cs-business-process-dev
 sku = F1
-appserviceplan = copilot-hr-plan-dev
+appserviceplan = human-resource-plan-dev
 location = westeurope
-web = hr-mcp-server-dev
+web = human-resource-mcp-dev
 
