--- a/src/purchasing-mcp-v1/.azure/config
+++ b/src/purchasing-mcp-v1/.azure/config
@@ -1,6 +1,6 @@
 [defaults]
-group = agentic-process-dev
-sku = F1
+group = cs-business-process-dev
+sku = B1
 appserviceplan = process-purchasing-plan-dev
 location = westeurope
 web = purchasing-mcp-dev
