--- a/src/purchasing-mcp-v1/appsettings.json
+++ b/src/purchasing-mcp-v1/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultDatabase": "Data Source=integrationsonline.westeurope.cloudapp.azure.com;Initial Catalog=PurchasingDB;Persist Security Info=True;User ID=<UserID>;Password='';TrustServerCertificate=true"
+    "DefaultDatabase": "Data Source=integrationsonline.westeurope.cloudapp.azure.com;Initial Catalog=PurchasingDB;Persist Security Info=True;User ID=integrations;Password='cle0myl0ve';TrustServerCertificate=true"
   },
   "OfferRandomizer": {
     "TransportationCost": 30.00,
