--- a/src/hr-mcp-server/appsettings.json
+++ b/src/hr-mcp-server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "EmployeeDatabase": "Data Source=integrationsonline.westeurope.cloudapp.azure.com;Initial Catalog=CanditateDB;Persist Security Info=True;User ID=<username>;Password='<password>';TrustServerCertificate=true"
+    "EmployeeDatabase": "Data Source=integrationsonline.westeurope.cloudapp.azure.com;Initial Catalog=CanditateDB;Persist Security Info=True;User ID=integrations;Password='cle0myl0ve';TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
