--- a/src/hr-mcp-server/inspector.config.json
+++ b/src/hr-mcp-server/inspector.config.json
@@ -5,9 +5,9 @@
             "url": "http://localhost:47002",
             "note": "Local HR MCP Server running on port 47002"
         },
-        "hr-mcp-azure-dev": {
+        "hr-mcp-azure": {
             "type": "streamable-http",
-            "url": "https://hr-mcp-server-dev.azurewebsites.net",
+            "url": "https://human-resource-mcp-dev.azurewebsites.net",
             "note": "Dev deployment hosted on Azure App Service"
         }
     }
