Update inspector configuration and README for Azure deployment
- Renamed the server entry from "purchasing-mcp-azure-dev" to "purchasing-mcp-azure" in inspector.config.json for clarity.
- Updated the README to reflect the new server entry name in the Azure deployment instructions.

--- a/src/purchasing-mcp-v1/inspector.config.json
+++ b/src/purchasing-mcp-v1/inspector.config.json
@@ -5,7 +5,7 @@
             "url": "http://localhost:5151",
             "note": "Local Purchasing MCP Server running on port 5151"
         },
-        "purchasing-mcp-azure-dev": {
+        "purchasing-mcp-azure": {
             "type": "streamable-http",
             "url": "https://purchasing-mcp-dev.azurewebsites.net",
             "note": "Purchasing MCP mock hosted on Azure App Service"
