Add Submit Refund Request and Thank You topics with adaptive cards
- Implemented the Submit Refund Request dialog with adaptive card prompts for user input including email, destination, departure date, return date, amount, and comments.
- Added logic to normalize date formats and invoke a flow action for processing the refund request.
- Created a Thank You dialog that responds to user expressions of gratitude.
- Included a blind image asset for use in the application.

--- a/src/food-catalog-api/appsettings.Development.json
+++ b/src/food-catalog-api/appsettings.Development.json
@@ -14,7 +14,7 @@
     "App": {
         "Title": "Food Catalog - Development",
         "AuthEnabled": false,
-        "ImgBaseUrl": "https://agenticprocessdev.blob.core.windows.net/food/"
+        "ImgBaseUrl": "https://csbusinessprocessdev.blob.core.windows.net/food/"
     },
     "Logging": {
         "LogLevel": {
