--- a/src/food-catalog-api/appsettings.json
+++ b/src/food-catalog-api/appsettings.json
@@ -9,12 +9,12 @@
         "ConnectionString": "<ConnectionString>"
     },
     "ConnectionStrings": {
-        "DefaultDatabase": "Data Source=integrationsonline.westeurope.cloudapp.azure.com;Initial Catalog=FoodCatalogDB;Persist Security Info=True;User ID=integrations;Password='cle0myl0ve';TrustServerCertificate=true"
+        "DefaultDatabase": "Data Source=integrationsonline.westeurope.cloudapp.azure.com;Initial Catalog=FoodCatalogDB;Persist Security Info=True;User ID=<userid>;Password='';TrustServerCertificate=true"
     },
     "App": {
         "Title": "Food Catalog",
         "AuthEnabled": false,
-        "ImgBaseUrl": "https://agenticprocessdev.blob.core.windows.net/food/"
+        "ImgBaseUrl": "https://csbusinessprocessdev.blob.core.windows.net/food/"
     },
     "Logging": {
         "LogLevel": {
