Add adaptive dialogs for calculating order quantity and submitting food demand
- Implemented `calculate-order-quantity.yaml` to calculate the quantity of food to order based on current stock and demand.
- Created `submit-demand.yaml` to collect user input for food demand using an adaptive card interface.
- Integrated AI model for demand prediction and set up variable bindings for order quantities.
- Enhanced user interaction with structured prompts for entering food quantities.

--- a/src/assets/topics/food-stock-buddy/submit-demand.yaml
+++ b/src/assets/topics/food-stock-buddy/submit-demand.yaml
@@ -1,5 +1,5 @@
 kind: AdaptiveDialog
-modelDescription: "Collect demand for food items to order. Triggered by phrases like: I want to provide my demand, I want to tell you what food I need"
+modelDescription: "Collect demand for food to order. Triggered by phrases like: I want to provide my demand, I want to tell you what food I need"
 beginDialog:
   kind: OnRecognizedIntent
   id: main
@@ -376,15 +376,15 @@ beginDialog:
 
     - kind: SetVariable
       id: setOutput
-      variable: Topic.niceOutput
+      variable: Topic.orderDemandClean
       value: '=JSON(Filter(Table({Name: "Kaiserschmarrn", Quantity: Topic.qtyKaiserschmarrn}, {Name: "WeisswurstMitBrezn", Quantity: Topic.qtyWeisswurstMitBrezn}, {Name: "WienerSchnitzel", Quantity: Topic.qtyWienerSchnitzel}, {Name: "PizzaNapoli", Quantity: Topic.qtyPizzaNapoli}, {Name: "Germknoedel", Quantity: Topic.qtyGermknoedel}, {Name: "AranciniNapoletana", Quantity: Topic.qtyAranciniNapoletana}, {Name: "SchweinshaxeMitKraut", Quantity: Topic.qtySchweinshaxeMitKraut}, {Name: "PadKaPrao", Quantity: Topic.qtyPadKaPrao}, {Name: "GreenCurry", Quantity: Topic.qtyGreenCurry}), Quantity > 0), JSONFormat.Compact)'
 
     - kind: SendActivity
       id: sendActivity_MnOZNi
       activity:
-        value: =Topic.niceOutput
+        value: =Topic.orderDemandClean
         text:
-          - "Your demand was successfully noted:{Topic.niceOutput}"
+          - "Your demand was successfully noted:{Topic.orderDemandClean}"
 
 inputType: {}
 outputType: {}
