--- a/src/hr-mcp-server/appsettings.Development.json
+++ b/src/hr-mcp-server/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "EmployeeDatabase": "Data Source=localhost;Initial Catalog=CanditateDB;Persist Security Info=True;User ID=integrations;Password='cle0myl0ve';TrustServerCertificate=true"
+    "EmployeeDatabase": "Data Source=localhost;Initial Catalog=CanditateDB;Persist Security Info=True;User ID=<user>;Password='';TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
